--- a/scripts/vs-model-plot-final-data.Rmd
+++ b/scripts/vs-model-plot-final-data.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Success Rate Prediction"
+title: "Grantsmanship Models"
 output: pdf_document
 ---
 
@@ -31,7 +31,7 @@ library(cowplot)
 ```
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
   root_dir <- getwd()
   project_directory <- dirname(root_dir)
   data_dir <- file.path(project_directory, 'raw-data')
@@ -40,7 +40,7 @@ library(cowplot)
 ```
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 
 data_processing_model <- function(data_file_name) {
   root_dir <- getwd()
@@ -55,6 +55,8 @@ data_processing_model <- function(data_file_name) {
              stringsAsFactors = FALSE)
   # count(lm_DF$SR)
   
+  lm_DF<- lm_DF  %>%  dplyr::rename(AC = "AV")
+  
   lm_DF$RS <- as.factor(lm_DF$RS)
   lm_DF$WH <- as.factor(lm_DF$WH)
   lm_DF$NP <- as.factor(lm_DF$NP)
@@ -67,10 +69,12 @@ data_processing_model <- function(data_file_name) {
   lm_DF$FR <- as.factor(lm_DF$FR)
   
   
+  
   NullModel <- glm(SR ~ 1, data = lm_DF, family = "binomial")
   FullModel <- glm(SR ~ ., data = lm_DF, family = "binomial")
-  BEmodel <-
-    stepAIC(FullModel, direction = "backward", trace = FALSE)
+  BEmodel <- stepAIC(FullModel, direction = "backward", trace = FALSE)
+  
+  
   
   if (data_file_name == "ModelData_SR20.csv") {
     model_20 <-
@@ -82,7 +86,7 @@ data_processing_model <- function(data_file_name) {
     return(model_30)
   } else{
     model_50 <-
-      glm(SR ~ NP + FA + H + E + BF + DS + AV + PR,
+      glm(SR ~ NP + FA + H + E + BF + DS + AC + PR,
           family = "binomial",
           data = lm_DF)
     return(model_50)
@@ -91,17 +95,17 @@ data_processing_model <- function(data_file_name) {
 }
 
 ```
-\newpage
-## Moderately Successful SR_20
-```{r, echo=FALSE}
+
+
+```{r, echo=FALSE, warning=FALSE}
 model_20 <- data_processing_model("ModelData_SR20.csv")
-summary(model_20)
+# summary(model_20)
 
 
 ```
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 
 Zcrit<-1.96   ### critical value for 95% confidence intervals
   
@@ -121,15 +125,14 @@ Model_Data_20 <- mutate(ndata,
 ```
 
 
-\newpage
-## Successful SR_30
-```{r, echo=FALSE}
+## Successful Grantsmanship
+```{r, echo=FALSE, warning=FALSE}
 model_30 <- data_processing_model("ModelData_SR30.csv")
 summary(model_30)
 ```
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 
 Zcrit<-1.96   ### critical value for 95% confidence intervals
   
@@ -151,13 +154,13 @@ Model_Data_30 <- mutate(ndata,
 # summary(model_30)
 ```
 \newpage
-## Highly Successful SR_50
-```{r, echo=FALSE}
+## Highly Successful Grantsmanship
+```{r, echo=FALSE, warning=FALSE}
 model_50 <- data_processing_model("ModelData_SR50.csv")
 summary(model_50)
 ```
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 ilink <- family(model_50)$linkinv
 NP<-as.factor(c("1","2","3",rep("1",18)))
 FA<-as.factor(c(rep("1",3),"1","2","3","4","5","6",rep("1",12)))
@@ -166,8 +169,8 @@ DS<-as.factor(c(rep("1",11),"1","2",rep("1",8)))
 PR<-as.factor(c(rep("1",13),"1","2","3","4","5", rep("1",3)))
 H<-rep(29.56824,21)
 E<-rep(5.957816,21)
-AV<-rep(18.81638,21)
-tmpd<-data.frame(NP,FA,BF,DS,PR,H,E,AV)
+AC<-rep(18.81638,21)
+tmpd<-data.frame(NP,FA,BF,DS,PR,H,E,AC)
 ndata <- cbind(tmpd, setNames(as_tibble(predict(model_50, tmpd, se.fit = TRUE)[1:2]),
                               c('fit_link','se_link')))
 Model_Data_50 <- mutate(ndata,
@@ -179,7 +182,7 @@ Model_Data_50 <- mutate(ndata,
 
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 slice_df <- function(DF, R1, R2, Item, Conf){
   sliced_data = DF %>% 
         dplyr::slice(R1:R2) %>% 
@@ -212,19 +215,33 @@ Model_Data <- rbind(Model_Data, slice_df(Model_Data_50, 14, 18, "PR", "50"))
 
 
 ```{r, echo=FALSE}
-np_actual = c("1" = "NP1", "2" = "NP2", "3"="NP3")
+# np_actual = c("1" = "NP1", "2" = "NP2", "3"="NP3")
+# fa_actual = c("1" = "NSF", "2" = "NIH", "3" = "DOE", "4" = "DOD", "5" = "NASA", "6" = "OT")
+# TS_actual = c("1" = "TS1", "2" = "TS2")
+# DS_actual = c("1" = "DS1", "2" = "DS2")
+# BF_actual = c("1" = "BF1", "2" = "BF2")
+# PR_actual = c("1" = "PR1", "2" = "PR2", "3" = "PR3", "4" = "PR4", "5" = "PR5")
+# RS_actual = c("1" = "RS1", "2" = "RS2")
+# FR_actual = c("1" = "FR1", "2" = "FR2", "3" = "FR3")
+# H_actual = c("0" = "0", "50" = "50", "100" = "100", "150" ="150", "200" = "200")
+```
+
+
+```{r, echo=FALSE, warning=FALSE}
+
+np_actual = c("1" = expression(bolditalic(NP[1])), "2" = expression(bolditalic(NP[2])), "3"=expression(bolditalic(NP[3])))
 fa_actual = c("1" = "NSF", "2" = "NIH", "3" = "DOE", "4" = "DOD", "5" = "NASA", "6" = "OT")
-TS_actual = c("1" = "TS1", "2" = "TS2")
-DS_actual = c("1" = "DS1", "2" = "DS2")
-BF_actual = c("1" = "BF1", "2" = "BF2")
-PR_actual = c("1" = "PR1", "2" = "PR2", "3" = "PR3", "4" = "PR4", "5" = "PR5")
-RS_actual = c("1" = "RS1", "2" = "RS2")
-FR_actual = c("1" = "FR1", "2" = "FR2", "3" = "FR3")
+TS_actual = c("1" = expression(bolditalic(TS[1])), "2" = expression(bolditalic(TS[2])))
+DS_actual = c("1" = expression(bolditalic(DS[1])), "2" = expression(bolditalic(DS[2])))
+BF_actual = c("1" = expression(bolditalic(BF[1])), "2" = expression(bolditalic(BF[2])))
+PR_actual = c("1" = expression(bolditalic(PR[1])), "2" = expression(bolditalic(PR[2])), "3" = expression(bolditalic(PR[3])), "4" = expression(bolditalic(PR[4])), "5" = expression(bolditalic(PR[5])))
+RS_actual = c("1" = expression(bolditalic(RS[1])), "2" = expression(bolditalic(RS[2])))
+FR_actual = c("1" = expression(bolditalic(FR[1])), "2" = expression(bolditalic(FR[2])), "3" = expression(bolditalic(FR[3])))
 H_actual = c("0" = "0", "50" = "50", "100" = "100", "150" ="150", "200" = "200")
 ```
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 
 get_legend_plot <-
   function(Data,
@@ -299,15 +316,15 @@ get_legend_plot <-
 
 np_color = c("#4CAEE3", "#ee9a00", "red")
 Legend_plot = get_legend_plot(Model_Data, "NP", np_actual, "title", 20, np_color)
-Legend_plot
+# Legend_plot
 legend <- get_legend(Legend_plot)
 
 # 
  y_title = bquote( ~ italic("P"[.(29)]))
- print(y_title)
+ # print(y_title)
 ```
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 sectionA_plots <-
   function(Data,
            item,
@@ -316,6 +333,12 @@ sectionA_plots <-
            configuration, color) {
     
     axis_text_size <- 8
+    
+    if (item =="FA"){
+      font_face = "bold"  
+    }else{
+      font_face = "bold.italic"
+    }
     
     if (item == "NP" | item == "H" | item == "TA") {
       y_title = bquote( ~ italic("P"[.(paste0("G", configuration))]))
@@ -349,7 +372,7 @@ sectionA_plots <-
           axis.text.y = y_text,
           plot.title = plot_title_,
           panel.grid = element_blank(),
-          axis.text.x = element_text(face = "bold", size = axis_text_size),
+          axis.text.x = element_text(face = font_face, size = axis_text_size),
           # axis.text.y = element_text(face = "bold", size = 6),
           legend.position = "none"
         ) +
@@ -378,7 +401,7 @@ sectionA_plots <-
           axis.text.y = y_text,
           plot.title = plot_title_,
           panel.grid = element_blank(),
-          axis.text.x = element_text(face = "bold", size = axis_text_size),
+          axis.text.x = element_text(face = font_face, size = axis_text_size),
           # axis.text.y = element_text(face = "bold", size = 6),
           legend.position = "none"
         ) +
@@ -403,7 +426,7 @@ sectionA_plots <-
 
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 continous_features_plots <-
   function(model_name,
            item,
@@ -484,7 +507,7 @@ continous_features_plots <-
           axis.ticks.x = element_blank()
         )
       return(plt)
-    } else if(item == "AV") {
+    } else if(item == "AC") {
       
       plt = plot_model(model_name, type = "pred", terms = item) +
         geom_line(aes(colour = item), size = 1) +
@@ -549,7 +572,7 @@ continous_features_plots <-
 
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 dummy_df <- data.frame(
   x = c(0, 1, 0, 1),
   y = c(1, 0, 0, 1),
@@ -753,9 +776,7 @@ SectionC_draw_dummy_plot <-
 ```
 
 
-
-## SectionA
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 orange = "#ee9a00"
 blue = "#4CAEE3"
 
@@ -880,8 +901,7 @@ Research_tactics <- plot_grid(Research_tactics, legend, nrow = 2, rel_heights = 
 
 ```
 
-## Section B
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 
 # plot1 = continous_features_plots(model_20, "H", H_actual, "h-index", 20)
 plot2 = continous_features_plots(model_30, "H", H_actual, "h-index", 30, blue)
@@ -894,13 +914,12 @@ sectionB <- ggarrange(
   nrow = 2,
   ncol = 1
 )
-sectionB
+# sectionB
 
 
 ```
 
-## Section C
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 
 
 plot_item <- c("DS")
@@ -931,7 +950,7 @@ plot5 <- SectionA_draw_dummy_plot("", "")
 plot6 <- SectionA_draw_dummy_plot("", "")
 plot7 <- SectionA_draw_dummy_plot("", "")
 plot8 = continous_features_plots(model_50, "E", H_actual, "", "", orange)
-plot9 = continous_features_plots(model_50, "AV", H_actual, "", "", blue)
+plot9 = continous_features_plots(model_50, "AC", H_actual, "", "", blue)
 
 sectionC <- ggarrange(
   plotDS30,
@@ -963,10 +982,10 @@ sectionC <- ggarrange(
 #   nrow = 3,
 #   ncol = 4
 # )
-sectionC
+# sectionC
 ```
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 
 section_BC <- plot_grid(sectionB, sectionC, rel_widths = c(1, 2), ncol = 2, labels = c("b", "c"))
 
@@ -989,7 +1008,7 @@ final_plot <-
 
 
 
-filename <- "Figure_SR_prediction_version9.pdf"
+filename <- "Figure2.pdf"
 full_path <- file.path(plot_dir, filename)
 ggsave(
   full_path,
